# gh-systems-challenge

./: .env.sample  .gitignore  Dockerfile  README.md  compose.override.yml  compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
ghsystems/: asgi.py  settings.py  urls.py  wsgi.py
ghsystems/apps/api/: apps.py  urls.py
ghsystems/apps/api/auth/: urls.py
ghsystems/apps/api/tasks/: serializers.py  urls.py  views.py
ghsystems/apps/core/: admin.py  apps.py  models.py
ghsystems/apps/core/migrations/: 0001_initial.py
ghsystems/apps/tasks/: admin.py  apps.py  models.py
ghsystems/apps/tasks/migrations/: 0001_initial.py
ghsystems/apps/utils/: apps.py  models.py
